--- a/viewer_with_legend_gray_new.html
+++ b/viewer_with_legend_gray_new.html
@@ -507,41 +507,24 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     }
 
     function fitObject(obj){
-      const b = new THREE.Box3().setFromObject(obj);
-      const s = b.getSize(new THREE.Vector3());
-      const c = b.getCenter(new THREE.Vector3());
+      const b=new THREE.Box3().setFromObject(obj);
+      const s=b.getSize(new THREE.Vector3());
+      const c=b.getCenter(new THREE.Vector3());
       orbitTarget.copy(c);
 
-      // ✅ 用包围球估距离（更不容易出现“右边被裁”）
-      const radius = 0.5 * s.length(); // 包围球半径（够稳）
-      const vHalf = THREE.MathUtils.degToRad(camera.fov * 0.5);
-      const hHalf = Math.atan(Math.tan(vHalf) * camera.aspect);
-      const half = Math.min(vHalf, hHalf);
+      const md=Math.max(s.x,s.y,s.z)||1;
+      const dist=md/(2*Math.tan(Math.PI*camera.fov/360));
+      const dir = new THREE.Vector3(-1, 1, 0.5).normalize();
+      camera.position.copy(c.clone().add(dir.multiplyScalar(dist*1.4)));
 
-      let dist = radius / Math.sin(half);
-      dist *= 1.08; // 画面留边距：想更大 -> 改小(1.02~1.05)，想更稳 -> 改大(1.12~1.20)
-
-      // ✅ 关键：根据模型长宽，选“更侧向”的默认观察方向，避免从一端看导致左空右爆
-      let dir;
-      if (s.x >= s.y) {
-      // 模型更“沿X方向很长” -> 相机更偏Y方向看
-        dir = new THREE.Vector3(-0.20, 1.00, 0.55);
-      } else {
-      // 模型更“沿Y方向很长” -> 相机更偏X方向看
-        dir = new THREE.Vector3(-1.00, 0.20, 0.55);
-      }
-      dir.normalize();
-
-      camera.position.copy(c.clone().add(dir.multiplyScalar(dist)));
-
-      camera.near = Math.max(0.01, dist / 1000);
-      camera.far  = dist * 10000;
+      camera.near=Math.max(0.01,dist/1000);
+      camera.far=dist*10000;
       camera.updateProjectionMatrix();
 
       camera.up.set(0,0,1);
       lookAtTarget();
     }
-    
+
     function clearMeasure(){
       measureA=measureB=null;
       if(measureLine){root.remove(measureLine);measureLine.geometry.dispose();measureLine.material.dispose();measureLine=null;}
