--- a/viewer_with_legend_gray_new.html
+++ b/viewer_with_legend_gray_new.html
@@ -198,8 +198,8 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
     // 两个固定三维坐标（你给的坐标）
     const sonarLabels = [
-      { el: createSonarLabel('青依江声纳1'), pos: new THREE.Vector3(-95.1689, -8.7773, -2.3931) },
-      { el: createSonarLabel('青依江声纳2'), pos: new THREE.Vector3(-96.1814,  3.6400, -2.3909) },
+      { el: createSonarLabel('声纳2'), pos: new THREE.Vector3(-95.1689, -8.7773, -2.3931) },
+      { el: createSonarLabel('声纳1'), pos: new THREE.Vector3(-96.1814,  3.6400, -2.3909) },
     ];
 
     let sonarLabelsVisible = false;
