--- a/viewer_online_advanced.html
+++ b/viewer_online_advanced.html
@@ -95,8 +95,24 @@
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
 
+    // ✅ 新增：当前模型坐标增量（来自 zuobiaozhuanhuan.txt）
+    let coordDelta = new THREE.Vector3(0,0,0); // Δx,Δy,Δz
+
+    // ✅ 新增：线扫（来自 xiansao.txt）
+    let xiansaoGroup = null; // points + line 的组
+
+    // ✅ 新增：记录当前加载的 plyUrl，便于点模式切换时重载并带上附加文件
+    let currentPlyUrl = null;
+
     function setToggle(btn, on){ btn.setAttribute('aria-pressed', on? 'true':'false'); }
     function isOn(btn){ return btn.getAttribute('aria-pressed') === 'true'; }
+
+    function sceneScale(){
+      if(!currentObj) return 1;
+      const box = new THREE.Box3().setFromObject(currentObj);
+      const size = box.getSize(new THREE.Vector3());
+      return Math.max(size.x,size.y,size.z) || 1;
+    }
 
     function fitObject(obj){
       const box = new THREE.Box3().setFromObject(obj);
@@ -109,6 +125,123 @@
       camera.near = Math.max(0.01, dist/1000); camera.far = dist*10000; camera.updateProjectionMatrix();
     }
 
+    // ====== ✅ 新增：从 plyUrl 推导同目录 baseDir ======
+    function baseDirFromPlyUrl(plyUrl){
+      try{
+        const u = new URL(String(plyUrl), location.href);
+        u.hash = ''; u.search = '';
+        const path = u.pathname;
+        const i = path.lastIndexOf('/');
+        u.pathname = (i >= 0 ? path.slice(0, i+1) : '/');
+        return u.href; // 以 / 结尾
+      }catch(_){
+        const clean = String(plyUrl).split('?')[0].split('#')[0];
+        const i = clean.lastIndexOf('/');
+        return (i >= 0 ? clean.slice(0, i+1) : './');
+      }
+    }
+
+    // 读取文本：优先无后缀，其次 .txt
+    async function fetchTextTry(baseDir, name){
+      const tries = [
+        baseDir + name,
+        baseDir + name + '.txt',
+      ];
+      for(const url of tries){
+        try{
+          const r = await fetch(url + '?_=' + Date.now());
+          if(!r.ok) continue;
+          const t = (await r.text()).trim();
+          if(t) return t;
+        }catch(_){}
+      }
+      return null;
+    }
+
+    function parseXYZ(text){
+      if(!text) return null;
+      const s = text.trim().replace(/\s+/g,'');
+      const parts = s.split(',');
+      if(parts.length < 3) return null;
+      const x = parseFloat(parts[0]);
+      const y = parseFloat(parts[1]);
+      const z = parseFloat(parts[2]);
+      if(!Number.isFinite(x) || !Number.isFinite(y) || !Number.isFinite(z)) return null;
+      return {x,y,z};
+    }
+
+    // ====== ✅ 新增：加载 zuobiaozhuanhuan.txt (Δx,Δy,Δz) ======
+    async function loadCoordDeltaForModel(plyUrl){
+      const baseDir = baseDirFromPlyUrl(plyUrl);
+      const txt = await fetchTextTry(baseDir, 'zuobiaozhuanhuan'); // 会尝试无后缀和 .txt
+      const xyz = parseXYZ(txt);
+      if(xyz){
+        coordDelta.set(xyz.x, xyz.y, xyz.z);
+      }else{
+        coordDelta.set(0,0,0);
+      }
+      return coordDelta;
+    }
+
+    // ====== ✅ 新增：加载 xiansao.txt（100行*3列） ======
+    async function loadXiansaoPointsForModel(plyUrl){
+      const baseDir = baseDirFromPlyUrl(plyUrl);
+      const url = baseDir + 'xiansao.txt';
+      try{
+        const r = await fetch(url + '?_=' + Date.now());
+        if(!r.ok) return null;
+        const text = (await r.text()).trim();
+        if(!text) return null;
+
+        const lines = text.split(/\r?\n/).map(s=>s.trim()).filter(Boolean);
+        const pts = [];
+        for(const line of lines){
+          // 支持：空格/Tab/逗号
+          const parts = line.split(/[,\s]+/).filter(Boolean);
+          if(parts.length < 3) continue;
+          const x = parseFloat(parts[0]);
+          const y = parseFloat(parts[1]);
+          const z = parseFloat(parts[2]);
+          if(Number.isFinite(x) && Number.isFinite(y) && Number.isFinite(z)){
+            pts.push(new THREE.Vector3(x,y,z));
+          }
+        }
+        return pts.length ? pts : null;
+      }catch(_){
+        return null;
+      }
+    }
+
+    function clearXiansao(){
+      if(!xiansaoGroup) return;
+      root.remove(xiansaoGroup);
+      xiansaoGroup.traverse(o=>{
+        if(o.geometry) o.geometry.dispose?.();
+        if(o.material) o.material.dispose?.();
+      });
+      xiansaoGroup = null;
+    }
+
+    function showXiansao(pts){
+      clearXiansao();
+      if(!pts || pts.length < 2) return;
+
+      xiansaoGroup = new THREE.Group();
+
+      const lineGeo = new THREE.BufferGeometry().setFromPoints(pts);
+      const lineMat = new THREE.LineBasicMaterial({ color: 0x8000ff }); // 紫色
+      const line = new THREE.Line(lineGeo, lineMat);
+      xiansaoGroup.add(line);
+
+      const ptsGeo = new THREE.BufferGeometry().setFromPoints(pts);
+      const size = sceneScale() * 0.008; // 点大小（可调）
+      const ptsMat = new THREE.PointsMaterial({ color: 0x8000ff, size });
+      const points = new THREE.Points(ptsGeo, ptsMat);
+      xiansaoGroup.add(points);
+
+      root.add(xiansaoGroup);
+    }
+
     function clearScene(){
       if(currentObj){
         root.remove(currentObj);
@@ -117,6 +250,8 @@
         currentObj=null;
       }
       clearMeasure();
+      clearXiansao();             // ✅ 新增：清掉线扫
+      coordDelta.set(0,0,0);      // ✅ 新增：复位增量（避免失败加载沿用旧值）
       hud.textContent = '提示：启用“拾取”或“测距”后，在模型上点击。';
     }
 
@@ -126,8 +261,14 @@
     }
 
     async function loadPLY(url){
+      currentPlyUrl = url; // ✅ 记录当前 url
       status.textContent='加载中...';
       clearScene();
+
+      // ✅ 并发读取：ΔxΔyΔz 与线扫点
+      const deltaPromise = loadCoordDeltaForModel(url);
+      const xiansaoPromise = loadXiansaoPointsForModel(url);
+
       loader.load(url,(geometry)=>{
         geometry.computeBoundingBox();
         const hasColor = !!geometry.getAttribute('color');
@@ -135,20 +276,39 @@
           ? new THREE.PointsMaterial({ size: parseFloat(pointSize.value), vertexColors: hasColor })
           : new THREE.MeshBasicMaterial({ color:0xdddddd, wireframe:false });
         currentObj = pointMode.checked ? new THREE.Points(geometry, mat) : new THREE.Mesh(geometry, mat);
+
         root.add(currentObj);
         fitObject(currentObj);
+
+        // ✅ 模型出来后再挂线扫（以及确保 coordDelta 已更新）
+        deltaPromise.then(()=>{ /* coordDelta 已更新 */ });
+        xiansaoPromise.then((pts)=>{ if(pts) showXiansao(pts); });
+
         status.textContent='加载完成';
-      },(xhr)=>{ if(xhr.total) status.textContent = '下载 '+(xhr.loaded/xhr.total*100).toFixed(1)+'%'; },(err)=>{ console.error(err); status.textContent='加载失败'; });
+      },(xhr)=>{
+        if(xhr.total) status.textContent = '下载 '+(xhr.loaded/xhr.total*100).toFixed(1)+'%';
+      },(err)=>{
+        console.error(err);
+        status.textContent='加载失败';
+      });
     }
 
     pointSize.addEventListener('input',()=>{
-      if(currentObj && currentObj.material && currentObj.material.size!==undefined){ currentObj.material.size = parseFloat(pointSize.value); }
+      if(currentObj && currentObj.material && currentObj.material.size!==undefined){
+        currentObj.material.size = parseFloat(pointSize.value);
+      }
+    });
+
+    // 点模式切换：重新加载当前模型（并自动带上 Δ / 线扫）
+    pointMode.addEventListener('change', ()=>{
+      if(currentPlyUrl) loadPLY(currentPlyUrl);
     });
 
     // ==== 拾取 & 测距 ====
     renderer.domElement.addEventListener('pointerdown', (e)=>{
       if(!currentObj) return;
       if(!isOn(pickBtn) && !isOn(measureBtn)) return;
+
       const rect = renderer.domElement.getBoundingClientRect();
       mouse.x = ((e.clientX - rect.left) / rect.width) * 2 - 1;
       mouse.y = -((e.clientY - rect.top) / rect.height) * 2 + 1;
@@ -157,6 +317,7 @@
       let inter = null;
       if(currentObj.type === 'Points'){
         // 对点云进行近邻拾取
+        raycaster.params.Points.threshold = sceneScale() * 0.01; // ✅ 让点云更容易点到
         const pts = raycaster.intersectObject(currentObj, true);
         if(pts.length) inter = pts[0];
       }else{
@@ -167,22 +328,47 @@
 
       const p = inter.point.clone();
 
+      // ✅ 显示用坐标（加增量）
+      const px = p.x + coordDelta.x;
+      const py = p.y + coordDelta.y;
+      const pz = p.z + coordDelta.z;
+
       if(isOn(pickBtn)){
-        hud.textContent = `拾取\nX: ${p.x.toFixed(3)}\nY: ${p.y.toFixed(3)}\nZ: ${p.z.toFixed(3)}`;
+        hud.textContent = `拾取\nX: ${px.toFixed(3)}\nY: ${py.toFixed(3)}\nZ: ${pz.toFixed(3)}`;
       }
 
       if(isOn(measureBtn)){
         if(!measureA){
           measureA = p.clone();
-          hud.textContent = `测距(A)\nX: ${measureA.x.toFixed(3)} Y: ${measureA.y.toFixed(3)} Z: ${measureA.z.toFixed(3)}`;
+          const ax = measureA.x + coordDelta.x;
+          const ay = measureA.y + coordDelta.y;
+          const az = measureA.z + coordDelta.z;
+          hud.textContent = `测距(A)\nX: ${ax.toFixed(3)} Y: ${ay.toFixed(3)} Z: ${az.toFixed(3)}`;
         }else if(!measureB){
           measureB = p.clone();
+
+          // ✅ Δ 使用原始坐标（真实距离/差值不受显示增量影响）
           const dx = measureB.x - measureA.x;
           const dy = measureB.y - measureA.y;
           const dz = measureB.z - measureA.z;
           const d = Math.sqrt(dx*dx+dy*dy+dz*dz);
-          hud.textContent = `测距 A→B\nΔX: ${dx.toFixed(3)}\nΔY: ${dy.toFixed(3)}\nΔZ: ${dz.toFixed(3)}\nD : ${d.toFixed(3)}`;
-          // 画线
+
+          // ✅ A/B 坐标显示为加过 Δ 的
+          const ax = measureA.x + coordDelta.x;
+          const ay = measureA.y + coordDelta.y;
+          const az = measureA.z + coordDelta.z;
+
+          const bx = measureB.x + coordDelta.x;
+          const by = measureB.y + coordDelta.y;
+          const bz = measureB.z + coordDelta.z;
+
+          hud.textContent =
+            `测距 A→B\n` +
+            `A: (${ax.toFixed(3)}, ${ay.toFixed(3)}, ${az.toFixed(3)})\n` +
+            `B: (${bx.toFixed(3)}, ${by.toFixed(3)}, ${bz.toFixed(3)})\n` +
+            `ΔX: ${dx.toFixed(3)}\nΔY: ${dy.toFixed(3)}\nΔZ: ${dz.toFixed(3)}\nD : ${d.toFixed(3)}`;
+
+          // 画线（用原始点位画，和模型对齐）
           const geo = new THREE.BufferGeometry().setFromPoints([measureA, measureB]);
           const mat = new THREE.LineBasicMaterial({ color: 0x00e0ff });
           measureLine = new THREE.Line(geo, mat);
@@ -191,14 +377,28 @@
           // 第三次点击：重新开始
           clearMeasure();
           measureA = p.clone();
-          hud.textContent = `测距(A)\nX: ${measureA.x.toFixed(3)} Y: ${measureA.y.toFixed(3)} Z: ${measureA.z.toFixed(3)}`;
+          const ax = measureA.x + coordDelta.x;
+          const ay = measureA.y + coordDelta.y;
+          const az = measureA.z + coordDelta.z;
+          hud.textContent = `测距(A)\nX: ${ax.toFixed(3)} Y: ${ay.toFixed(3)} Z: ${az.toFixed(3)}`;
         }
       }
     });
 
-    pickBtn.addEventListener('click',()=>{ setToggle(pickBtn, !isOn(pickBtn)); if(isOn(pickBtn)) setToggle(measureBtn,false); });
-    measureBtn.addEventListener('click',()=>{ setToggle(measureBtn, !isOn(measureBtn)); if(isOn(measureBtn)) setToggle(pickBtn,false); });
-    clearBtn.addEventListener('click', ()=>{ clearMeasure(); hud.textContent='已清除测距/拾取结果'; });
+    pickBtn.addEventListener('click',()=>{
+      setToggle(pickBtn, !isOn(pickBtn));
+      if(isOn(pickBtn)) setToggle(measureBtn,false);
+    });
+
+    measureBtn.addEventListener('click',()=>{
+      setToggle(measureBtn, !isOn(measureBtn));
+      if(isOn(measureBtn)) setToggle(pickBtn,false);
+    });
+
+    clearBtn.addEventListener('click', ()=>{
+      clearMeasure();
+      hud.textContent='已清除测距/拾取结果';
+    });
 
     // ==== index.json 下拉 ====
     let bridges=[], scenes=[];
