--- a/viewer_with_legend_gray_new.html
+++ b/viewer_with_legend_gray_new.html
@@ -436,9 +436,9 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
       xiansaoGroup = new THREE.Group();
 
-      const lineGeo = new THREE.BufferGeometry().setFromPoints(pts);
-      const lineMat = new THREE.LineBasicMaterial({ color: 0x8000ff }); // 紫色
-      xiansaoGroup.add(new THREE.Line(lineGeo, lineMat));
+      //const lineGeo = new THREE.BufferGeometry().setFromPoints(pts);
+      //const lineMat = new THREE.LineBasicMaterial({ color: 0x8000ff }); // 紫色
+      //xiansaoGroup.add(new THREE.Line(lineGeo, lineMat));
 
       const ptsGeo = new THREE.BufferGeometry().setFromPoints(pts);
       const size = sceneScale() * 0.0008; // 相对场景大小
